Test/Error/ac/ERROR.NOT.STATEMENT.ac
FN MAIN() {
  VAR X:1;
  # FORGOT 'SET'
  X=2;
}